# workshops

./: filepath.ipynb  readme.md
AwesomeArrow/: pyproject.toml  readme.md  speedtest.ipynb
AwesomeDAG/: pyproject.toml  test.ipynb  workspace.yaml
AwesomeDAG/dags/: notebook_asset.ipynb  ops.py  pipeline.py  readme.md
AwesomeDocker/: compose.yml  dockerfile  pyproject.toml  readme.md
AwesomeDocker/params/: db_init.sh
AwesomeStreamlit/: __init__.py  morda.py  pyproject.toml  test.ipynb
