[tool.poetry]
name = "awesomearrow"
version = "0.1.0"
description = ""
authors = ["Charubaiel <aleksandrin.a@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.3"
polars = "^0.16.11"
duckdb = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
